Movies search view finished

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,21 +1,7 @@
-/*
-COLORS
-Primary: #2066F0
-Primary light: #6695CA
-Primary dark: #202226
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-*/
-
 :root {
-  --color-primary: #2066f0;
-  --color-primary-light: #6695ca;
-  --color-primary-dark: #202226;
+  --color-primary: #678ade;
+  --color-primary-light: #383759;
+  --color-primary-dark: #26283f;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
@@ -63,13 +49,15 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  color: var(--color-grey-dark-2);
-  background-image: linear-gradient(
-    to bottom right,
-    var(--color-grey-light-2),
-    var(--color-grey-light-2)
-  );
+  color: var(--color-grey-light-1);
+  background-color: var(--color-primary-dark);
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
+}
+
+h1 {
+  font-weight: 700;
+  font-size: 3rem;
+  opacity: 0.8;
 }
