--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: var(--color-primary);
+  background-color: var(--color-primary-light);
   display: flex;
   height: 7rem;
   align-items: center;
@@ -12,7 +12,7 @@
     display: flex;
     line-height: 1;
     padding: 2rem 4rem;
-    background-color: var(--color-primary-light);
+    background-color: var(--color-primary);
     align-self: stretch;
     align-items: center;
     font-weight: 700;
@@ -30,10 +30,17 @@
     align-items: center;
     color: var(--color-grey-light-3);
     position: relative;
+    background-color: #262840;
+    padding: 8px 30px;
+    max-width: 60rem;
+    width: 100%;
+    border-radius: 10rem;
+    border: solid 2px #807dd094;
 
     input {
       font-family: inherit;
-      font-size: inherit;
+      font-size: 1.5rem;
+      width: 100%;
       color: inherit;
       background-color: transparent;
       border: none;
@@ -46,11 +53,16 @@
         font-weight: 300;
         color: var(--color-grey-light-1);
       }
+
+      &:focus {
+        border: none;
+        outline: none;
+      }
     }
 
     &__button {
       z-index: 9999;
-      color: var(--color-grey-light-3);
+      color: inherit;
       background-color: transparent;
       border: none;
       font-size: 2rem;
@@ -60,6 +72,7 @@
 
   & .menu {
     display: flex;
+    margin-left: 2rem;
     margin-right: 2rem;
     font-size: 2.5rem;
 
@@ -73,26 +86,78 @@
   }
 }
 
-.container__movies {
-  justify-content: center;
+.container {
+  padding: 7rem 6em;
   width: 100%;
   min-height: 100vh;
-  flex-wrap: wrap;
-  display: flex;
-  padding: 3rem;
+}
 
-  &:last-child {
-    justify-self: flex-start;
+.results {
+  margin-bottom: 5rem;
+}
+
+.container__movies {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  justify-content: space-between;
+  align-content: space-between;
+  grid-gap: 6rem 7rem;
+}
+
+@for $i from 1 to 10 {
+  .container__movies div:nth-child(#{$i}) {
+    animation-delay: $i * 0.25s;
   }
 }
 
 .movie {
-  padding: 2rem;
-  width: 20%;
-  padding: 2rem 5rem;
+  position: relative;
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  cursor: pointer;
+  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
+
   &__img {
-    width: 100%;
-    height: auto;
+    max-width: 100%;
+    position: relative;
+    height: 40vh;
     object-fit: cover;
+    margin-bottom: 1rem;
+    box-shadow: var(--shadow-dark);
+    border-radius: 1px;
+  }
+
+  &__details {
+    transform: translateY(-3rem);
+    opacity: 0;
+    text-align: center;
+    text-transform: uppercase;
+    visibility: hidden;
+    transition: opacity, transform 300ms cubic-bezier(0.645, 0.045, 0.355, 1),
+      0.3s;
+  }
+
+  &__name {
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.7rem;
+  }
+
+  &:hover {
+    transform: scale(1.1);
+
+    .movie__img {
+      box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.4);
+    }
+
+    .movie__details {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0rem);
+    }
   }
 }
