--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -46,7 +46,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-grey-light-1);
@@ -59,5 +59,4 @@ body {
 h1 {
   font-weight: 700;
   font-size: 3rem;
-  opacity: 0.8;
 }
