--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -41,7 +41,7 @@ html {
   font-size: 62.5%; //1rem = 10px
 
   @media only screen and (max-width: $bp-large) {
-    font-size: 50%;
+    font-size: 55%;
   }
 }
 
@@ -59,4 +59,8 @@ body {
 h1 {
   font-weight: 700;
   font-size: 3rem;
+
+  @media only screen and (max-width: $bp-small) {
+    font-size: 2rem;
+  }
 }
