--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -2,7 +2,6 @@
   background-color: var(--color-primary-light);
   display: flex;
   height: 7rem;
-  align-items: center;
   justify-content: flex-start;
   color: var(--color-grey-light-3);
   font-size: 1.2rem;
@@ -20,12 +19,29 @@
       font-size: 2.5rem;
       line-height: 1;
       margin-right: 1rem;
+      @media only screen and (max-width: $bp-large) {
+        margin-right: 0rem;
+      }
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      padding: 2rem 3rem;
+    }
+
+    &__title {
+      @media only screen and (max-width: $bp-large) {
+        display: none;
+      }
+    }
+    @media only screen and (max-width: $bp-smallest) {
+      display: none;
     }
   }
 
   & .search {
     margin-left: 4rem;
     margin-right: auto;
+    align-self: center;
     display: flex;
     align-items: center;
     color: var(--color-grey-light-3);
@@ -36,6 +52,16 @@
     width: 100%;
     border-radius: 10rem;
     border: solid 2px #807dd094;
+
+    @media only screen and (max-width: $bp-large) {
+      margin-left: 2rem;
+      width: 50%;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      margin-left: 1rem;
+      width: 60%;
+    }
 
     input {
       font-family: inherit;
@@ -72,16 +98,132 @@
 
   & .menu {
     display: flex;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    font-size: 2.5rem;
+    font-size: 3rem;
 
-    & * {
+    & > div {
       cursor: pointer;
+      padding: 0 3rem;
+      height: 100%;
+      color: var(--color-primary);
+      display: flex;
+      align-items: center;
+      position: relative;
 
-      &:not(:last-child) {
-        margin-right: 2rem;
+      @media only screen and (max-width: $bp-large) {
+        padding: 0 2rem;
       }
+
+      @media only screen and (max-width: $bp-smallest) {
+        padding: 0 1.5rem;
+      }
+
+      &:hover {
+        background-color: #262840;
+      }
+    }
+
+    &__viewed {
+      &:hover .menu__viewed__panel {
+        visibility: visible;
+        opacity: 1;
+      }
+
+      &__panel {
+        position: absolute;
+        border-radius: 0 0 5px 5px;
+        right: 0;
+        top: 7rem;
+        z-index: 999999;
+        padding: 0rem;
+        width: 30rem;
+        background-color: #262840;
+        box-shadow: var(--shadow-dark);
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.2s;
+
+        @media only screen and (max-width: $bp-smallest) {
+          width: 25rem;
+        }
+      }
+    }
+    &__favorite {
+      &:hover .menu__favorite__panel {
+        visibility: visible;
+        opacity: 1;
+      }
+
+      &__panel {
+        position: absolute;
+        border-radius: 0 0 5px 5px;
+        right: 0;
+        top: 7rem;
+        z-index: 999999;
+        padding: 0rem;
+        width: 30rem;
+        background-color: #262840;
+        box-shadow: var(--shadow-dark);
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.2s;
+
+        @media only screen and (max-width: $bp-smallest) {
+          width: 25rem;
+        }
+      }
+    }
+  }
+
+  .movie__item__panel {
+    display: block;
+
+    a:last-of-type {
+      border-radius: 0 0 5px 5px;
+    }
+
+    &__div {
+      display: flex;
+      align-items: center;
+      padding: 2rem 3rem;
+
+      @media only screen and (max-width: $bp-small) {
+        padding: 1.5rem 2.5rem;
+        flex-direction: row-reverse;
+      }
+
+      &:hover {
+        background-color: var(--color-primary);
+      }
+    }
+
+    &__img {
+      max-width: 6rem;
+      height: 8rem;
+      border-radius: 2px;
+      margin-right: 2rem;
+      object-fit: cover;
+      box-shadow: var(--shadow-dark);
+
+      @media only screen and (max-width: $bp-small) {
+        max-width: 5rem;
+        height: 7rem;
+        margin-right: 0rem;
+        margin-left: 2rem;
+      }
+
+      @media only screen and (max-width: $bp-smallest) {
+        max-width: 4rem;
+        height: 6rem;
+        margin-right: 0rem;
+        margin-left: 1.5rem;
+      }
+    }
+
+    &__title {
+      font-size: 1.6rem;
+      line-height: 1.2;
+      color: var(--color-grey-light-1);
+      font-weight: 100;
     }
   }
 }
@@ -90,6 +232,17 @@
   padding: 7rem 6em;
   width: 100%;
   min-height: calc(100vh - 7rem);
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+
+  @media only screen and (max-width: $bp-largest) {
+    padding: 6rem 5rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 4rem 3em;
+  }
 }
 
 .container__home {
@@ -98,22 +251,59 @@
   justify-content: center;
   align-items: center;
 
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
+
   & > * {
     padding: 4rem;
+    @media only screen and (max-width: $bp-largest) {
+      padding: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      padding: 2.5rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 2rem;
+      text-align: center;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      padding: 1.5rem;
+      text-align: center;
+    }
   }
 
   &-title {
     text-transform: uppercase;
     font-weight: 100;
-    font-size: 7rem;
+    font-size: 6rem;
     color: var(--color-primary);
     margin-bottom: 2rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 4rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 3.5rem;
+    }
   }
 
   &-text {
     color: #fff;
     font-size: 2rem;
     font-weight: 200;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      font-size: 1.6rem;
+    }
   }
 
   &-left {
@@ -123,6 +313,11 @@
     align-items: center;
     img {
       max-width: 80%;
+
+      @media only screen and (max-width: $bp-medium) {
+        max-width: 60%;
+        margin-bottom: 3rem;
+      }
     }
   }
 
@@ -137,20 +332,23 @@
 
 .results {
   margin-bottom: 5rem;
+
+  @media only screen and (max-width: $bp-small) {
+    margin-bottom: 3rem;
+  }
+}
+
+.container__search {
+  width: 100%;
 }
 
 .container__movies {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   justify-content: space-between;
   align-content: space-between;
-  grid-gap: 6rem 7rem;
-}
-
-@for $i from 1 to 10 {
-  .container__movies div:nth-child(#{$i}) {
-    animation-delay: $i * 0.25s;
-  }
+  grid-gap: 6rem 4rem;
+  margin-bottom: 4rem;
 }
 
 .movie {
@@ -172,6 +370,22 @@
     margin-bottom: 1rem;
     box-shadow: var(--shadow-dark);
     border-radius: 1px;
+
+    @media only screen and (max-width: $bp-largest) {
+      height: 44vh;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      height: 36vh;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      height: 60vw;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      height: 100vw;
+    }
   }
 
   &__details {
@@ -182,6 +396,12 @@
     visibility: hidden;
     transition: opacity, transform 300ms cubic-bezier(0.645, 0.045, 0.355, 1),
       0.3s;
+
+    @media only screen and (max-width: $bp-medium) {
+      transform: translateY(0rem);
+      opacity: 1;
+      visibility: visible;
+    }
   }
 
   &__name {
@@ -192,6 +412,10 @@
 
   &:hover {
     transform: scale(1.1);
+
+    @media only screen and (max-width: $bp-medium) {
+      transform: scale(1.05);
+    }
 
     .movie__img {
       box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.4);
@@ -209,11 +433,16 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  max-width: 120rem;
+  max-width: 140rem;
   margin: 0 auto;
 
+  @media only screen and (max-width: $bp-large) {
+    flex-direction: column;
+    align-items: center;
+  }
+
   & > * {
-    padding: 3rem;
+    padding: 2rem;
     flex: 1;
   }
 
@@ -221,34 +450,254 @@
     display: flex;
     justify-content: center;
 
+    @media only screen and (max-width: $bp-large) {
+      flex: 1 1 40%;
+    }
+
     img {
       max-height: 70vh;
+      max-width: 100%;
       object-fit: cover;
+      box-shadow: var(--shadow-dark);
+      border-radius: 5px;
+
+      @media only screen and (max-width: $bp-largest) {
+        max-height: 55vw;
+      }
+
+      @media only screen and (max-width: $bp-medium) {
+        max-height: 55vw;
+      }
+
+      @media only screen and (max-width: $bp-small) {
+        max-height: 65vw;
+      }
+
+      @media only screen and (max-width: $bp-smallest) {
+        max-height: 80vw;
+      }
     }
   }
 
   &__details {
     display: flex;
     flex-direction: column;
+    align-self: stretch;
     margin-top: 2rem;
+
+    @media only screen and (max-width: $bp-largest) {
+      margin-top: 0rem;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      flex: 1 1 60%;
+      margin-top: 0rem;
+      padding: 4rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 2.5rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      flex: 1 1 60%;
+      margin-top: 0rem;
+      padding: 1.5rem;
+    }
+
+    &-details {
+      font-weight: 400;
+      font-size: 1.7rem;
+      margin-bottom: 3rem;
+
+      @media only screen and (max-width: $bp-small) {
+        flex-wrap: wrap;
+      }
+    }
 
     &-name {
       color: var(--color-primary);
       font-weight: 100;
       font-size: 4rem;
+
+      @media only screen and (max-width: $bp-small) {
+        font-size: 3rem;
+      }
     }
 
     &-details {
       display: flex;
 
       & > *:not(:last-child) {
-        margin-right: 3rem;
+        margin-right: 2.5rem;
       }
 
-      & > [class^='icon'] {
-        margin-right: 2rem;
+      & > * i[class*='icon'] {
+        margin-right: 5px;
+        color: var(--color-primary);
+        font-size: 2rem;
+      }
+
+      & > * {
+        display: flex;
+        align-items: center;
       }
     }
+
+    &-plot {
+      font-size: 1.7rem;
+      font-weight: 100;
+
+      @media only screen and (max-width: $bp-largest) {
+        font-size: 1.7rem;
+      }
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    margin-top: 4rem;
+    font-weight: 300;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+
+    @media only screen and (max-width: $bp-small) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    & > *:last-child {
+      margin-left: 2rem;
+    }
+  }
+
+  .details__imdb {
+    margin-right: auto;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
+  }
+
+  .imdb__score {
+    margin-left: 10px;
+  }
+
+  .details__actions-later,
+  .details__actions-favorite {
+    border-radius: 50%;
+    height: 5rem;
+    width: 5rem;
+    padding: 0rem;
+    line-height: 1;
+
+    i {
+      font-size: 2.5rem;
+      font-weight: 900;
+    }
+  }
+
+  .details__go-back {
+    font-weight: 300;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin-top: auto;
+    margin-bottom: 2rem;
+    align-self: flex-start;
+    padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      width: 100%;
+      margin-bottom: 2rem;
+      padding: 1rem 3rem;
+    }
+
+    i {
+      font-size: 2.5rem;
+      font-weight: 400;
+      margin-right: 10px;
+    }
+  }
+}
+
+.movies__pagination {
+  display: flex;
+  justify-content: space-between;
+  .button {
+    font-weight: 300;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin-top: auto;
+    margin-bottom: 2rem;
+    align-self: flex-start;
+    padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      width: auto;
+      margin-bottom: 2rem;
+      padding: 1rem 3rem;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+      width: auto;
+      margin-bottom: 2rem;
+      padding: 1rem 2rem;
+    }
+
+    i {
+      font-size: 2.5rem;
+      font-weight: 400;
+    }
+  }
+
+  .details__go-back {
+    i {
+      margin-right: 10px;
+    }
+  }
+
+  .details__go-next {
+    flex-direction: row-reverse;
+    i {
+      margin-left: 10px;
+    }
+  }
+}
+
+/* BUTTONS */
+
+a {
+  text-decoration: none;
+}
+
+.button {
+  line-height: 1;
+  color: #fff;
+  outline: none;
+  border: none;
+  border-radius: 3rem;
+  padding: 1.5rem 3.5rem;
+  cursor: pointer;
+  transition: all 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(
+    to bottom right,
+    var(--color-primary),
+    var(--color-primary-light)
+  );
+  box-shadow: var(--shadow-light);
+
+  &:hover {
+    transform: translateY(-2px) scale(1.05);
+  }
+
+  &:active {
+    box-shadow: var(--shadow-dark);
+    transform: translateY(2px);
   }
 }
 
@@ -258,6 +707,7 @@
   height: 60vh;
   display: flex;
   align-items: center;
+  margin: 0 auto;
   justify-content: center;
 }
 
@@ -269,6 +719,16 @@
   margin: 0 10px;
   width: 10px;
   height: 5rem;
+
+  @media only screen and (max-width: $bp-small) {
+    width: 6px;
+    height: 3.5rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    width: 5px;
+    height: 3rem;
+  }
 }
 
 .line:nth-child(1) {
