--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -15,6 +15,7 @@
     align-self: stretch;
     align-items: center;
     font-weight: 700;
+    cursor: pointer;
     & .icon {
       font-size: 2.5rem;
       line-height: 1;
