--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -39,10 +39,39 @@ $bp-smallest: 31.25em; //500px
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1rem = 10px
+  overflow-x: hidden;
 
   @media only screen and (max-width: $bp-large) {
     font-size: 55%;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+  background: transparent; /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary);
+  background-color: var(--color-primary);
+}
+
+#scroll::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+#scroll::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+#scroll::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background: var(--color-primary);
+  background-color: var(--color-primary);
 }
 
 body {
